--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-spinner-material": "^1.4.0",
