--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.0",
     "mdb-react-ui-kit": "^5.0.0",
     "netlify": "^13.0.2",
+    "netlify-cli": "^12.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
